overflow solved

--- a/Grid.css
+++ b/Grid.css
@@ -3,7 +3,7 @@
 .contenedor{
     display: grid;
     grid-gap:10px;
-    grid-template-columns: repeat(2, minmax(600px, 1fr));
+    grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(12, auto);
     grid-template-areas:"header                         header"
                         "video-01                       video-01"
@@ -26,8 +26,8 @@
      .contenedor{
         display: grid;
         grid-gap: 10px;
-        grid-template-columns: repeat(1, minmax(600px, 1fr));
-        grid-template-rows: repeat(auto, auto);
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(18, auto);
         grid-template-areas:
         "header"
         "video-01"
@@ -136,7 +136,7 @@
        display: grid;
        grid-gap: 20px;
        grid-template-columns: repeat(2, 1fr);
-       grid-template-rows: repeat(auto, auto);
+       grid-template-rows: repeat(6, auto);
    
        grid-template-areas: "menu           menu"
                             "contenido      contenido"
@@ -153,7 +153,7 @@
        display: grid;
        grid-gap: 20px;
        grid-template-columns: repeat(1, 1fr);
-       grid-template-rows: repeat(auto, auto);
+       grid-template-rows: repeat(8, auto);
    
        grid-template-areas: "menu"
                             "contenido"
